Changed mobile width to cover up a visual overflow bug

--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -5,8 +5,8 @@
 @greenish: #1b9e85;
 @light: #ffffff;
 // Dimension
-@mobileWidth: 835px;
-@screen-sm: 835px;
+@mobileWidth: 873px;
+@screen-sm: 873px;
 @page-z: 1;
 @overlay-z: 1000;
 @floating-header-z: 2000;
